tests/NormalTests/paczka1/small_fuzzy/80488963.err
Error in line 1: ubLfjET7gj9 S551 98,2
Error in line 4: ¥tVCyq S262 59,9
Error in line 7: ktVCyq S551 60,3
Error in line 3: ubLfjET7gj9 S262 39,6
Error in line 9: ktVCyq A452 32,9
